Примитивный контроллер для счетов

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
-spring.main.web-application-type=none
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.main.web-application-type=none
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
